--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 </head>
 
 <body>
+    <!-- header start -->
     <header>
         <nav>
-            <h2 class="nav-title">G3 Architects</h2>
+            <h2 class="same-title">G3 Architects</h2>
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
@@ -32,8 +33,32 @@
             <img src="images/banner.png" alt="">
         </div>
     </header>
-    <main>
 
+    <!-- header end -->
+    <main>
+        <!--team section start-->
+        <section class="team-container">
+            <div class="team-img">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="team-content">
+                <h1 class="team-title"><span class="quick-text">Quick list</span> <span class="same-title">of Our</span> <span class="feature-text">Features</span></h1>
+                <p class="same-discription">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
+        <!-- feature section -->
+        <section class="feature">
+
+        </section>
+       <!-- facts section -->
+       <section class="facts">
+        <h3 class="same-title">Some Facts</h3>
+        <p class="same-discription">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+       </section>
     </main>
     <footer>
 
