add a new project

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         <div class="banner">
             <div class="banner-content">
                 <h1 class="banner-title">Brand New Group of Architects </h1>
-                <p class="banner-discription">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <p class="same-discription">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    look even</p>
                 <button class="btn-primary">Explore More</button>
             </div>
             <img src="images/banner.png" alt="">
@@ -45,20 +47,94 @@
                 <img src="images/team4.png" alt="">
             </div>
             <div class="team-content">
-                <h1 class="team-title"><span class="quick-text">Quick list</span> <span class="same-title">of Our</span> <span class="feature-text">Features</span></h1>
-                <p class="same-discription">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <h1 class="team-title"><span class="quick-text">Quick list</span> <span class="same-title">of Our</span>
+                    <span class="team-text">Features</span>
+                </h1>
+                <p class="same-discription">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    look even</p>
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
+
+
+
         <!-- feature section -->
         <section class="feature">
+            <div class="feature-container">
+                <h3 class="same-title tata">Features you will <br> love & enjoy</h3>
+                <p class="same-discription">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
 
+              <div class="feature-card">
+                <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                <p class="same-discription">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+              </div>
+              <div class="feature-card">
+                <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                <p class="same-discription">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+              </div>
+              <div class="feature-card">
+                <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                <p class="same-discription">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+              </div>
+              <div class="feature-card">
+                <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                <p class="same-discription">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+              </div>
+            </div>
+          <div class="feature-img">
+            <img src="images/architect.png" alt="">
+            <div class="ten-years-bage">
+                <h2>10+Year</h2>
+                <p> Experience</p>
+            </div>
+          </div>
         </section>
-       <!-- facts section -->
-       <section class="facts">
-        <h3 class="same-title">Some Facts</h3>
-        <p class="same-discription">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
-       </section>
+
+
+
+        <!-- facts section -->
+        <section class="facts">
+            <h3 class="same-title">Some Facts</h3>
+            <p class="same-discription">There are many variations of passages of Lorem Ipsum available, but the majority
+                have suffered alteration.</p>
+            <div class="facts-card-container">
+                <div class="card">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h2 class="card-stats">54</h2>
+                    <p class="cards-title">Awards Winnings</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/projects.png" alt="">
+                    <h2 class="card-stats">1458</h2>
+                    <p class="cards-title">Project Finished</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/customers.png" alt="">
+                    <h2 class="card-stats">590</h2>
+                    <p class="cards-title">Clients Worked</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/email.png" alt="">
+                    <h2 class="card-stats">22578</h2>
+                    <p class="cards-title">Email Send</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- sponser section -->
+        <section class="sponser-container">
+            <h3 class="sponser-title">Our Sponspors</h3>
+            <p class="same-discription">There are many variations of passages of Lorem Ipsum available, but the majority
+                have suffered alteration.</p>
+            <div class="social-media-img">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+        </section>
     </main>
     <footer>
 
